<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/llResend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvResentTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5dp"
            android:text="@string/no_otp_received"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:id="@+id/tvResendBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_otp_in"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_resend_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/maximum_number_of_retries_exceeded_please_try_again_after_10_mins"
        android:textColor="@color/lite_red"
        android:textSize="@dimen/_14sp"
        app:layout_constraintStart_toStartOf="@+id/llResend"
        app:layout_constraintTop_toBottomOf="@+id/llResend" />
</androidx.constraintlayout.widget.ConstraintLayout>