<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--toolbar-->
            <LinearLayout
                android:id="@+id/ll_action_bar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginStart="@dimen/back_arrow_margin_start"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_back_arrow"
                    android:layout_width="@dimen/back_arrow_width"
                    android:layout_height="@dimen/back_arrow_height"
                    android:src="@drawable/ic_arrow_back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/title_margin_start"
                    android:text="@string/otp_verification"
                    android:textColor="@color/textColorBlack"
                    android:textSize="@dimen/setup_privacy_screen_info"
                    android:textStyle="bold" />
            </LinearLayout>
            <!--toolbar end-->

            <TextView
                android:id="@+id/sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_action_bar"
                android:layout_alignParentLeft="true"
                android:layout_marginHorizontal="26dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="26dp"
                android:gravity="center"
                android:text="@string/verify_your_aadhar_card_and_phone_number_for_data_security_and_privacy"
                android:textAppearance="@style/style_subtitle"
                android:textColor="@null"
                android:textSize="@null" />

            <ImageView
                android:id="@+id/imgview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sub_title"
                android:layout_centerInParent="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="14dp"
                android:clipToOutline="true"
                android:src="@drawable/ic_otp" />


            <FrameLayout
                android:id="@+id/fl_aadhar_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgview"
                android:layout_marginTop="16dp">


                <include
                    android:id="@+id/layout_haveABHANumber"
                    layout="@layout/layout_have_abha_number"
                    android:visibility="visible"
                    tools:visibility="visible" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_otpBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fl_aadhar_mobile"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_20"
                android:visibility="gone"
                tools:visibility="visible">

                <com.mukesh.OtpView
                    android:id="@+id/otpBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:inputType="number"
                    android:itemBackground="@color/fadeColor"
                    android:paddingBottom="@dimen/margin_20"
                    android:textColor="@color/colorPrimaryDark"
                    app:OtpItemCount="6"
                    app:OtpLineColor="@color/colorPrimaryDark"
                    app:OtpViewType="line"
                    tools:text="123456" />
            </FrameLayout>

            <RelativeLayout
                android:id="@+id/rl_resendOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fl_otpBox"
                android:layout_alignStart="@id/fl_otpBox"
                android:orientation="horizontal"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/resendTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_otp_received"
                    android:textColor="@color/textColorGray"
                    android:textSize="@dimen/text_14" />

                <TextView
                    android:id="@+id/resendBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tv_resend_otp_margin_start"
                    android:layout_toEndOf="@+id/resendTxt"
                    android:text="@string/resend_otp_in"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_14" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_resend_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_resendOTP"
                android:layout_alignStart="@id/fl_otpBox"
                android:layout_alignEnd="@id/fl_otpBox"
                android:layout_marginTop="@dimen/margin_10"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/tv_resend_counter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/maximum_number_of_retries_exceeded_please_try_again_after_10_mins"
                    android:textColor="@color/liteRed"
                    android:textSize="@dimen/text_14" />

            </LinearLayout>


            <android.widget.Button
                android:id="@+id/sendOtpBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_resend_counter"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_common_with_state"
                android:backgroundTint="@android:color/transparent"
                android:backgroundTintMode="src_over"
                android:drawableEnd="@drawable/ic_arrow_forward"
                android:drawableTint="@color/iconTintWhite"
                android:enabled="false"
                android:paddingStart="@dimen/common_button_padding_left"
                android:paddingTop="@dimen/common_button_padding_top"
                android:paddingEnd="@dimen/common_button_padding_right"
                android:paddingBottom="@dimen/common_button_padding_bottom"
                android:text="@string/send_otp"
                android:textColor="@color/iconTintWhite" />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>